[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Green_ammo.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo4.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo9.png" type="Texture" id=4]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo11.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo8.png" type="Texture" id=6]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo10.png" type="Texture" id=7]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/ammo_drop/arrow_drop/arrow_ammo6.png" type="Texture" id=11]


[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "glow",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 12.0

[node name="Green_ammo" type="RigidBody2D"]
collision_layer = 16
mass = 10.0
gravity_scale = 8.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.55, 0.55 )
frames = SubResource( 1 )
animation = "glow"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.668175, -0.556812 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Green_ammo_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
